Improved timeline logic. Fixs type errors and does not flicker rapidly

--- a/src/components/timeline/Timeline.module.css
+++ b/src/components/timeline/Timeline.module.css
@@ -37,28 +37,30 @@
   flex-direction: column;
   gap: 16px;
 
-    /* fade in on scroll */
-    opacity: 0;
-    transform: translateY(32px);
-    visibility: hidden;
-    will-change: opacity, visibility;
+  /* fade in on scroll */
+  opacity: 0;
+  transform: translateY(32px);
+  visibility: hidden;
 }
 
 .content-is-visible {
-    width: calc(50% - 20px);
-    padding: 20px;
-    background: var(--background);
-    border-radius: 8px;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
+  width: calc(50% - 20px);
+  padding: 20px;
+  background: var(--background);
+  border-radius: 8px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
 
-    /* fade in on scroll */
-    opacity: 1;
-    transform: none;
-    transition: opacity 0.6s ease-out, transform 1.2s ease-out;
-    visibility: visible;
+  /* fade in on scroll */
+  opacity: 1;
+  transform: none;
+  transition:
+    opacity 0.6s ease-out,
+    transform 1.2s ease-out;
+  visibility: visible;
+  will-change: opacity, visibility;
 }
 
 .content-is-visible:hover {
@@ -96,6 +98,6 @@
   }
 
   .timelineContent {
-    font-size: 0.8rem;
+    font-size: 12px;
   }
 }
